<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>notes</class>
 <widget class="QMainWindow" name="notes">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>616</width>
    <height>382</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string/>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="titleLabel">
      <property name="text">
       <string>Title</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="titleText"/>
    </item>
    <item row="0" column="2">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Saved Notes</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="subjectLabel">
      <property name="text">
       <string>Subject</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="subjectText"/>
    </item>
    <item row="1" column="2" rowspan="2" colspan="2">
     <widget class="QListWidget" name="notesList"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="bodyLabel">
      <property name="text">
       <string>Body</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
     </widget>
    </item>
    <item row="2" column="1" rowspan="5">
     <widget class="QTextEdit" name="bodyText"/>
    </item>
    <item row="3" column="2">
     <widget class="QPushButton" name="deleteNoteButton">
      <property name="text">
       <string>Delete Note</string>
      </property>
     </widget>
    </item>
    <item row="3" column="3">
     <widget class="QPushButton" name="viewNoteButton">
      <property name="text">
       <string>View Note</string>
      </property>
     </widget>
    </item>
    <item row="4" column="2">
     <widget class="QLabel" name="titleLabel_2">
      <property name="font">
       <font>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Title</string>
      </property>
     </widget>
    </item>
    <item row="5" column="2">
     <widget class="QLabel" name="subjectLabel_2">
      <property name="font">
       <font>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Subject</string>
      </property>
     </widget>
    </item>
    <item row="6" column="2">
     <widget class="QLabel" name="bodyLabel_2">
      <property name="text">
       <string>Body</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
     </widget>
    </item>
    <item row="7" column="1">
     <widget class="QPushButton" name="saveNoteButton">
      <property name="text">
       <string>Save Note</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>616</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuTasks">
    <property name="title">
     <string>Home</string>
    </property>
    <addaction name="actionHome"/>
   </widget>
   <widget class="QMenu" name="menuTasks_2">
    <property name="title">
     <string>Tasks</string>
    </property>
    <addaction name="actionCompleted_Tasks"/>
   </widget>
   <widget class="QMenu" name="menuAccount">
    <property name="title">
     <string>Account</string>
    </property>
    <addaction name="actionMy_Account"/>
   </widget>
   <addaction name="menuTasks"/>
   <addaction name="menuTasks_2"/>
   <addaction name="menuAccount"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionHome">
   <property name="text">
    <string>Home</string>
   </property>
  </action>
  <action name="actionCompleted_Tasks">
   <property name="text">
    <string>Completed Tasks</string>
   </property>
  </action>
  <action name="actionMy_Account">
   <property name="text">
    <string>My Account</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
